# cxxblas

./: CMakeLists.txt  README.org
cmake/: CXXBLAS.cmake
examples/: CMakeLists.txt  scale.cpp
include/: CMakeLists.txt  cxxblas.h.in
